chore: Update background image and styles for homepage and contact page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,9 @@
 }
 
 body {
-  background: white;
+  background-image: url('../../public/img/building.jpg');
+  background-position: center;
+  background-size: cover;
 }
 @layer utilities {
   .text-balance {
