--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,15 +17,10 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-image: url('../../public/img/building.jpg');
+  background-position: center;
+  background-size: cover;
 }
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
